aligned the columns with the header so it is better for the eye,it bugged me that it was not aligned

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ section {
   display: flex;
   justify-content: flex-start;
   height: inherit;
+  padding-left: 15px;
 }
 
 div .columns_container {
