--- a/src/styles/PlatfromLaunch.css
+++ b/src/styles/PlatfromLaunch.css
@@ -1,7 +1,6 @@
 .todo_container_platformLaunch {
   /* border: 1px solid black; */
   width: 400px;
-  margin-left: 80px;
 }
 
 .doing_container_platformLaunch {
